<resources>
    <string name="google_login_token">1033932776549-fj945uuad44519uger6v37ddj1u1bos9.apps.googleusercontent.com</string>
    <string name="facebook_app_id">573156691110738</string>
    <string name="fb_login_protocol_scheme">fb573156691110738</string>
    <string name="facebook_client_token">59c046894456e9434979bd1afea21024</string>
    <string name="app_name">Suit Up</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="suitup">Suit Up</string>
    <string name="logo">LOGO</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sing_up">SingUpActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closed_false">Closed: False</string>
    <string name="store_name">Spice Alley</string>
    <string name="store_address">26 Queen Street, NSW</string>
    <string name="store_categories">Asain, Thai</string>
    <string name="store_rating">4.8</string>
    <string name="result_attribute">Hot and New</string>
    <string name="store_number">20 Stores</string>
    <string name="filter">Filter</string>
    <string name="filter_head">Filter</string>
    <string name="filter_category_1">Quick filter</string>
    <string name="filter_category_2">Sort by</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="price_filter">Price $$$</string>
    <string name="sort_filter">Close to me</string>
    <string name="store_hours">11:30AM to 11PM</string>
    <string name="share">Share</string>
    <string name="photo">Photo</string>
    <string name="call">Call</string>
    <string name="cuisines">Cuisines</string>
    <string name="price">Price</string>
    <string name="photos">Photos</string>
    <string name="date">2022-08-29 00:41:13</string>
    <string name="text">Text</string>
    <string name="reviews">Reviews</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
</resources>