<?xml version="1.0" encoding="utf-8"?>
<!-- bottom_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_white"
        android:title="@string/home"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/activity"
        android:icon="@drawable/ic_location_white"
        android:title="@string/map"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_heart_white"
        android:title="@string/favorites"
        app:cnb_iconColor="@color/primary" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_profile_outline_white"
        android:title="@string/profile"
        app:cnb_iconColor="@color/primary" />
</menu>