<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:elevation="@dimen/elevation_m2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/review_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/review_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.HomeItemTitle"
            android:layout_marginStart="@dimen/margin"
            android:text="Username"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2" />

        <TextView
            android:id="@+id/review_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:textSize="12sp"
            android:text="@string/date"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toBottomOf="@+id/review_name" />

        <RatingBar
            android:id="@+id/review_rating_bar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/review_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/store_rating"
            app:layout_constraintStart_toEndOf="@+id/review_rating_bar"
            app:layout_constraintTop_toTopOf="@+id/review_rating_bar" />

        <TextView
            android:id="@+id/review_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_rating_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>